# coros-mcp

./: .env.example  .gitignore  README.md  coros_api.py  models.py  pyproject.toml  server.py
docs/: discover-endpoints.md
